[project]
name = "gestor"
version = "0.1.1"
description = "Proyecto a modo de prueba, en la que se evaluan varios conceptos como:
Interfaz grafica, creacion, modificacion, eliminacion y gestion de un proyecto para un sistema de documentos con pruebas unitarias al mismo tiempo que es moderno con
la herramienta de poetry.
Dependencias como FastApi que nos permite automatizar tareas desde /docs con la herramienta de Uvicorn y utilizando Pydantic para establecer parametros"
authors = [
    {name = "emiliano martinha"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
